Added .html ending to link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   
      <body>
          <h1>Odin Recipes!</h1>
-         <a href="./pages/recipecompilation">Click me!</a>
+         <a href="./pages/recipecompilation.html">Click me!</a>
      </body>  
 </html>
