--- a/pages/recipecompilation.html
+++ b/pages/recipecompilation.html
@@ -6,4 +6,11 @@
     <h1><strong>Delicious Chorizo and mozzarella gnocchi bake</strong></h1>
     <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/gnocchi-1d16725.jpg?quality=90&webp=true&resize=300,272" alt="Delicious Chorizo">
     <h2><p><a href="./chorizocake/recipe1.html">Click me!</a></p></h2>
+
+    <h3><strong>Easy Butter Chicken</strong></h3>
+    <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/butter-chicken-cf6f9e2.jpg?quality=90&webp=true&resize=300,272" alt="Easy Butter Chicken">
+    <h4><p><a href="./butterchicken/recipe2.html">Click me!</a></p></h4>
+     <h5><strong>Easy classic lasagne</strong></h5>
+     <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/classic-lasange-4a66137.jpg?quality=90&webp=true&resize=300,272" alt="Easy Classic lasagne">
+     <h6><p><a href="./lasagne/recipe3.html">Click me!</a></p></h6>
 </body>
