--- a/pages/butterchicken/recipe2.html
+++ b/pages/butterchicken/recipe2.html
@@ -17,8 +17,8 @@
              <li>1-2 tsp hot chilli powder</li>
              <li>200g natural yogurt</li> </ul>
              </h4>     
-        <h5>For the Curry</h5>
-        <h6>
+        <h3>For the Curry</h3>
+        <h4>
            <ul> <li>2 tbsp vegetable oil</li>
              <li>1 large onion, chopped</li>
              <li>3 garlic cloves, crushed</li>
@@ -29,17 +29,17 @@
              <li>3 tbsp tomato purée</li>
              <li>300ml chicken stock</li>
              <li>50g flaked almonds, toasted</li> </ul>
-        </h6>
-        <h7>Optional</h7>
-            <h8>
+        </h4>
+        <h3>Optional</h3>
+            <h4>
                 <ul>
                 <li>cooked basmati rice</li>
                 <li>naan bread</li>
                 <li>mango chutney or lime pickle</li>
                 <li>fresh coriander</li>
                 <li>lime wedges</li> </ul>
-            </h8>
-        <h9><strong>Cooking Steps!</strong></h9>
+            </h4>
+        <h2>Cooking Steps!</h2>
            <ol> <li><p>In a medium bowl, mix all the marinade ingredients with some seasoning. Chop the chicken into bite-sized pieces and toss with the marinade. Cover and chill in the fridge for 1 hr or overnight.</p></li>
             <li><p>In a large, heavy saucepan, heat the oil. Add the onion, garlic, green chilli, ginger and some seasoning. Fry on a medium heat for 10 mins or until soft.</p></li>
             <li><p>Add the spices with the tomato purée, cook for a further 2 mins until fragrant, then add the stock and marinated chicken. Cook for 15 mins, then add any remaining marinade left in the bowl. Simmer for 5 mins, then sprinkle with the toasted almonds. Serve with rice, naan bread, chutney, coriander and lime wedges, if you like.</p></li>
