--- a/pages/chorizocake/recipe1.html
+++ b/pages/chorizocake/recipe1.html
@@ -7,7 +7,7 @@
     </head>
      
     <body>
-        <h1><strong>Delicious Chorizo and mozzarella gnocchi bake</strong></h1>
+        <h1>Delicious Chorizo and mozzarella gnocchi bake</h1>
         <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/gnocchi-1d16725.jpg?quality=90&webp=true&resize=300,272" alt="Delicious Chorizo">
         <h2> Ingredients </h2>
         <h3>
@@ -22,7 +22,7 @@
              <li>small bunch of basil , torn</li>
              <li>green salad , to serve</li> </ul>
             </h3>
-        <h4><strong>Cooking Steps!</strong></h4>
+        <h2>Cooking Steps!</h2>
            <ol><li><p>Heat the oil in a medium pan over a medium heat. Fry the onion and garlic for 8-10 mins until soft. Add the chorizo and fry for 5 mins more. Tip in the tomatoes and sugar, and season. Bring to a simmer, then add the gnocchi and cook for 8 mins, stirring often, until soft. Heat the grill to high.</p></li>
             <li><p>Stir ¾ of the mozzarella and most of the basil through the gnocchi. Divide the mixture between six ovenproof ramekins, or put in one baking dish. Top with the remaining mozzarella, then grill for 3 mins, or until the cheese is melted and golden. Season, scatter over the remaining basil and serve with green salad.</p></li>
            </ol>
