--- a/pages/recipecompilation.html
+++ b/pages/recipecompilation.html
@@ -3,14 +3,17 @@
     <title>A Compilation of Delicious Recipes!</title>
 </head>
 <body>
-    <h1><strong>Delicious Chorizo and mozzarella gnocchi bake</strong></h1>
-    <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/gnocchi-1d16725.jpg?quality=90&webp=true&resize=300,272" alt="Delicious Chorizo">
-    <h2><p><a href="./chorizocake/recipe1.html">Click me!</a></p></h2>
+        <h1>A Complation of Delicious Recipes to Try Over the Holidays!</h1>
 
-    <h1><strong>Easy Butter Chicken</strong></h1>
+    <h2>Delicious Chorizo and Mozzarella Gnocchi Bake</h2>
+    <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/gnocchi-1d16725.jpg?quality=90&webp=true&resize=300,272" alt="Delicious Chorizo">
+    <h3><a href="./chorizocake/recipe1.html">Click me!</a></h3>
+
+    <h2>Easy Butter Chicken</h2>
     <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/butter-chicken-cf6f9e2.jpg?quality=90&webp=true&resize=300,272" alt="Easy Butter Chicken">
-    <h2><p><a href="./butterchicken/recipe2.html">Click me!</a></p></h2>
-     <h1><strong>Easy classic lasagne</strong></h1>
+    <h3><a href="./butterchicken/recipe2.html">Click me!</a></h3>
+     
+    <h2>Easy classic lasagne</h2>
      <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/classic-lasange-4a66137.jpg?quality=90&webp=true&resize=300,272" alt="Easy Classic lasagne">
-     <h2><p><a href="./lasagne/recipe3.html">Click me!</a></p></h2>
+     <h3><a href="./lasagne/recipe3.html">Click me!</a></h3>
 </body>
