--- a/pages/chorizocake/recipe1.html
+++ b/pages/chorizocake/recipe1.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Delicious Chorizo and mozzarella gnochi bake
-         <meta charset="utf-8">   
-        </title>
+        <title>Delicious Chorizo and mozzarella gnochi bake</title>
+        <meta charset="utf-8">  
     </head>
      
     <body>
