--- a/pages/butterchicken/recipe2.html
+++ b/pages/butterchicken/recipe2.html
@@ -11,15 +11,19 @@
         <img src=https://images.immediate.co.uk/production/volatile/sites/30/2020/08/butter-chicken-cf6f9e2.jpg?quality=90&webp=true&resize=300,272 alt= "Fantastic Butter Chicken">
         <h2>Ingredients</h2>
         <h3> For the Marinade</h3>
-        <h4> <ul> <li>1 lemon, juiced</li>
+        <h4> 
+            <ul> 
+             <li>1 lemon, juiced</li>
              <li>2 tsp ground cumin</li>
              <li>2 tsp paprika/li</li>
              <li>1-2 tsp hot chilli powder</li>
-             <li>200g natural yogurt</li> </ul>
-             </h4>     
+             <li>200g natural yogurt</li> 
+            </ul>
+        </h4>     
         <h3>For the Curry</h3>
         <h4>
-           <ul> <li>2 tbsp vegetable oil</li>
+        <ul> 
+             <li>2 tbsp vegetable oil</li>
              <li>1 large onion, chopped</li>
              <li>3 garlic cloves, crushed</li>
              <li>1 green chilli, deseeded and finely chopped (optional)</li>
@@ -28,17 +32,19 @@
              <li>2 tsp ground fenugreek</li>
              <li>3 tbsp tomato purée</li>
              <li>300ml chicken stock</li>
-             <li>50g flaked almonds, toasted</li> </ul>
+             <li>50g flaked almonds, toasted</li> 
+        </ul>
         </h4>
         <h3>Optional</h3>
-            <h4>
-                <ul>
+        <h4>
+            <ul>
                 <li>cooked basmati rice</li>
                 <li>naan bread</li>
                 <li>mango chutney or lime pickle</li>
                 <li>fresh coriander</li>
-                <li>lime wedges</li> </ul>
-            </h4>
+                <li>lime wedges</li> 
+            </ul>
+        </h4>
         <h2>Cooking Steps!</h2>
            <ol> <li><p>In a medium bowl, mix all the marinade ingredients with some seasoning. Chop the chicken into bite-sized pieces and toss with the marinade. Cover and chill in the fridge for 1 hr or overnight.</p></li>
             <li><p>In a large, heavy saucepan, heat the oil. Add the onion, garlic, green chilli, ginger and some seasoning. Fry on a medium heat for 10 mins or until soft.</p></li>
